syntax = "proto3";

import "client-server/ClientServer.proto";
import "shared/Compression.proto";

package Net64Protocol;

message ClientServerMessage {
  Shared.Compression compression = 1;
  uint32 uncompressed_size = 2;
  oneof message {
    bytes compressed_msg = 3;
    ClientServer.ClientServer msg = 4;
  }
}
