syntax = "proto3";

import "server-client/Handshake.proto";
import "server-client/PlayerList.proto";
import "server-client/ServerMessage.proto";
import "server-client/ChatMessage.proto";
import "server-client/PlayerData.proto";
import "shared/MinigameData.proto";
import "shared/Ping.proto";
import "shared/Player.proto";

package Net64Protocol.ServerClient;

message ServerClient {
  enum MessageType {
    UNUSED = 0;
    HANDSHAKE = 2;
    PING = 3;
    SERVER_MESSAGE = 4;
    PLAYER_LIST = 5;
    PLAYER_UPDATE = 6;
    PLAYER_DATA = 128;
    MINIGAME_DATA = 129;
    CHAT_MESSAGE = 130;
  }
  MessageType message_type = 1;
  oneof message {
    Handshake handshake = 2;
    Shared.Ping ping = 3;
    ServerMessage server_message = 4;
    PlayerList player_list = 5;
    Shared.Player player_update = 6;
    PlayerData player_data = 128;
    Shared.MinigameDataList minigame_data = 129;
    Chat chat = 130;
  }
}
