syntax = 'proto3';

import "Player.proto";

message PlayerListUpdate {
  repeated Player players = 1;
}