syntax = "proto3";

message PlayerData{
	fixed32 player_num = 1;
	fixed32 data_length = 2;
	bytes player_data = 3;
}
