syntax = "proto3";

message GameMode {
  GameModeType game_mode = 1;
}
enum GameModeType {
  NONE = 0;
  DEFAULT = 1;
  THIRD_PERSON_SHOOTER = 2;
  INTERACTIONLESS = 3;
  PROP_HUNT = 4;
  BOSS_RUSH = 5;
  TAG = 6;
  WARIO_WARE = 8;
}